COM-270: Use of Apache commons-lang3